[gd_scene load_steps=36 format=2]

[ext_resource path="res://actors/physics/PlatformActor.gd" type="Script" id=1]
[ext_resource path="res://actors/enemies/onion/Brain.gd" type="Script" id=2]
[ext_resource path="res://actors/combat/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/enemies/onion/OnionCharacter.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/combat/Attack.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/physics/StateMachine.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/physics/State.tscn" type="PackedScene" id=7]
[ext_resource path="res://actors/enemies/tomato/states/Idle.gd" type="Script" id=8]
[ext_resource path="res://actors/physics/Move.tscn" type="PackedScene" id=9]
[ext_resource path="res://actors/physics/Gravity.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/Command.gd" type="Script" id=11]
[ext_resource path="res://actors/enemies/tomato/states/Walk.gd" type="Script" id=12]
[ext_resource path="res://actors/physics/Stop.tscn" type="PackedScene" id=13]
[ext_resource path="res://actors/enemies/tomato/states/Chase.gd" type="Script" id=14]
[ext_resource path="res://actors/enemies/tomato/states/Stun.gd" type="Script" id=15]
[ext_resource path="res://objects/Spawner.gd" type="Script" id=16]
[ext_resource path="res://actors/combat/CombateStateMachine.tscn" type="PackedScene" id=17]
[ext_resource path="res://actors/physics/State.gd" type="Script" id=18]
[ext_resource path="res://actors/enemies/onion/GasCloud.tscn" type="PackedScene" id=19]
[ext_resource path="res://interface/HealthBar.tscn" type="PackedScene" id=20]
[ext_resource path="res://actors/enemies/Score.tscn" type="PackedScene" id=21]
[ext_resource path="res://actors/combat/HurtBox.tscn" type="PackedScene" id=22]
[ext_resource path="res://actors/enemies/tomato/ChasingSightArea.tscn" type="PackedScene" id=23]
[ext_resource path="res://interface/ScoreLabelSpawner.gd" type="Script" id=24]
[ext_resource path="res://actors/enemies/onion/OnionExplodingParticles.tscn" type="PackedScene" id=25]
[ext_resource path="res://actors/combat/HitBox.tscn" type="PackedScene" id=26]
[ext_resource path="res://actors/enemies/SightArea.tscn" type="PackedScene" id=27]
[ext_resource path="res://actors/enemies/onion/OnionTackleHit.tres" type="Resource" id=28]
[ext_resource path="res://actors/ActorProvider.tscn" type="PackedScene" id=29]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 40 )

[sub_resource type="CircleShape2D" id=2]
radius = 51.0044

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 50 )

[sub_resource type="CircleShape2D" id=4]
radius = 321.403

[sub_resource type="Animation" id=5]
resource_name = "tackle"
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("Character")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "tackle" ],
"method": "play"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("CombatStateMachine/TackleState/Attack/HitBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "enable"
}, {
"args": [  ],
"method": "disable"
} ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 120.416

[node name="Onion" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 1 )

[node name="Brain" type="Node" parent="."]
script = ExtResource( 2 )

[node name="IdleTime" type="Timer" parent="Brain"]
one_shot = true
autostart = true

[node name="WanderTime" type="Timer" parent="Brain"]
one_shot = true

[node name="StunTime" type="Timer" parent="Brain"]
wait_time = 0.25
one_shot = true

[node name="Health" parent="Brain" instance=ExtResource( 3 )]
max_health = 35

[node name="Character" parent="." instance=ExtResource( 4 )]

[node name="ScoreLabelSpawner" type="Position2D" parent="Character/Pivot/Body" index="5"]
script = ExtResource( 24 )

[node name="Score" parent="Character/Pivot/Body/ScoreLabelSpawner" instance=ExtResource( 21 )]
value = 210

[node name="ExplodingParticleSpawner" type="Position2D" parent="Character/Pivot/Body" index="6"]
script = ExtResource( 16 )
spawnling_scene = ExtResource( 25 )
container = "Level"

[node name="MovementActorProvider" parent="." instance=ExtResource( 29 )]
actor_path = NodePath("..")
receiver_path = NodePath("../MovementStateMachine")

[node name="MovementStateMachine" parent="." instance=ExtResource( 6 )]

[node name="IdleState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 8 )

[node name="Move" parent="MovementStateMachine/IdleState" instance=ExtResource( 9 )]
speed = 300.0

[node name="Gravity" parent="MovementStateMachine/IdleState" instance=ExtResource( 10 )]
actor_path = NodePath("../../../../Onion")

[node name="Chase" type="Node" parent="MovementStateMachine/IdleState"]
script = ExtResource( 11 )

[node name="WalkState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 12 )

[node name="Move" parent="MovementStateMachine/WalkState" instance=ExtResource( 9 )]
speed = 300.0

[node name="Stop" parent="MovementStateMachine/WalkState" instance=ExtResource( 13 )]

[node name="Gravity" parent="MovementStateMachine/WalkState" instance=ExtResource( 10 )]
actor_path = NodePath("../../../../Onion")

[node name="Chase" type="Node" parent="MovementStateMachine/WalkState"]
script = ExtResource( 11 )

[node name="ChaseState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 14 )

[node name="Move" parent="MovementStateMachine/ChaseState" instance=ExtResource( 9 )]
speed = 600.0

[node name="Stop" parent="MovementStateMachine/ChaseState" instance=ExtResource( 13 )]

[node name="Gravity" parent="MovementStateMachine/ChaseState" instance=ExtResource( 10 )]
actor_path = NodePath("../../../../Onion")

[node name="TackleState" parent="MovementStateMachine" instance=ExtResource( 7 )]

[node name="Stop" parent="MovementStateMachine/TackleState" instance=ExtResource( 13 )]

[node name="Gravity" parent="MovementStateMachine/TackleState" instance=ExtResource( 10 )]
actor_path = NodePath("../../../../Onion")

[node name="StunState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 15 )

[node name="DeadState" parent="MovementStateMachine" instance=ExtResource( 7 )]
script = ExtResource( 15 )

[node name="CombatActorProvider" parent="." instance=ExtResource( 29 )]
actor_path = NodePath("..")
receiver_path = NodePath("../CombatStateMachine")

[node name="CombatStateMachine" parent="." instance=ExtResource( 17 )]

[node name="IdleState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="TackleState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="Attack" parent="CombatStateMachine/TackleState" instance=ExtResource( 5 )]
position = Vector2( 69, -49.3334 )

[node name="HitBox" parent="CombatStateMachine/TackleState/Attack" instance=ExtResource( 26 )]
hit = ExtResource( 28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CombatStateMachine/TackleState/Attack/HitBox"]
shape = SubResource( 2 )
disabled = true

[node name="WalkState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="ChaseState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="StunState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 18 )

[node name="Attack" parent="CombatStateMachine/StunState" instance=ExtResource( 5 )]
cooldown = 2.0

[node name="GasCloudSpawner" type="Position2D" parent="CombatStateMachine/StunState/Attack"]
script = ExtResource( 16 )
spawnling_scene = ExtResource( 19 )
container = "Level"

[node name="HurtBox" parent="." groups=[
"enemy",
] instance=ExtResource( 22 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -50 )
shape = SubResource( 3 )

[node name="ChasingSightArea" parent="." instance=ExtResource( 23 )]
position = Vector2( 0, -60 )
monitorable = false

[node name="Shape" parent="ChasingSightArea" index="0"]
shape = SubResource( 4 )

[node name="AttackAnimator" type="AnimationPlayer" parent="."]
anims/tackle = SubResource( 5 )

[node name="HealthBar" parent="." instance=ExtResource( 20 )]
visible = false
margin_left = -90.0
margin_right = 90.0
margin_bottom = 30.0
health_path = NodePath("../Brain/Health")

[node name="Timer" type="Timer" parent="HealthBar"]
one_shot = true

[node name="TackleSightArea" parent="." instance=ExtResource( 27 )]

[node name="Shape" parent="TackleSightArea" index="0"]
position = Vector2( 0, -20 )
shape = SubResource( 6 )
[connection signal="timeout" from="Brain/IdleTime" to="Brain" method="_on_IdleTime_timeout"]
[connection signal="timeout" from="Brain/WanderTime" to="Brain" method="_on_WanderTime_timeout"]
[connection signal="timeout" from="Brain/StunTime" to="Brain" method="_on_StunTime_timeout"]
[connection signal="died" from="Brain/Health" to="Character/Pivot/Body/ScoreLabelSpawner/Score" method="score"]
[connection signal="died" from="Brain/Health" to="Character/Pivot/Body/ScoreLabelSpawner" method="spawn"]
[connection signal="died" from="Brain/Health" to="Character/Pivot/Body/ExplodingParticleSpawner" method="spawn"]
[connection signal="state_changed" from="MovementStateMachine" to="Brain" method="_on_StateMachine_state_changed"]
[connection signal="state_changed" from="MovementStateMachine" to="CombatStateMachine" method="change_state_to"]
[connection signal="entered" from="MovementStateMachine/IdleState" to="Character" method="play" binds= [ "idle" ]]
[connection signal="entered" from="MovementStateMachine/WalkState" to="Character" method="play" binds= [ "walk" ]]
[connection signal="entered" from="MovementStateMachine/ChaseState" to="Character" method="play" binds= [ "chase" ]]
[connection signal="entered" from="MovementStateMachine/StunState" to="Character" method="play" binds= [ "stun" ]]
[connection signal="state_changed" from="CombatStateMachine" to="Brain" method="_on_CombatStateMachine_state_changed"]
[connection signal="started" from="CombatStateMachine/TackleState/Attack" to="AttackAnimator" method="play" binds= [ "tackle" ]]
[connection signal="started" from="CombatStateMachine/StunState/Attack" to="CombatStateMachine/StunState/Attack" method="start_cooldown"]
[connection signal="started" from="CombatStateMachine/StunState/Attack" to="CombatStateMachine/StunState/Attack/GasCloudSpawner" method="spawn"]
[connection signal="damage_inflicted" from="HurtBox" to="Brain/Health" method="damage"]
[connection signal="hit_landed" from="HurtBox" to="Brain" method="_on_HurtBox_hit_landed"]
[connection signal="hurt" from="HurtBox" to="MovementStateMachine" method="change_state_to" binds= [ "Stun" ]]
[connection signal="hurt" from="HurtBox" to="HealthBar" method="show"]
[connection signal="chase_direction_changed" from="ChasingSightArea" to="Brain" method="_on_ChasingSightArea_chase_direction_changed"]
[connection signal="missed" from="ChasingSightArea" to="Brain" method="_on_ChasingSightArea_missed"]
[connection signal="spotted" from="ChasingSightArea" to="Brain" method="_on_ChasingSightArea_spotted"]
[connection signal="animation_finished" from="AttackAnimator" to="Brain" method="_on_AttackAnimator_animation_finished"]
[connection signal="draw" from="HealthBar" to="HealthBar/Timer" method="start"]
[connection signal="timeout" from="HealthBar/Timer" to="HealthBar" method="hide"]
[connection signal="spotted" from="TackleSightArea" to="Brain" method="_on_TackleSightArea_spotted"]

[editable path="Character"]

[editable path="ChasingSightArea"]

[editable path="TackleSightArea"]
